--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,8 @@ jobs:
 
     - name: Run unit tests
       run: |
-        python -m unittest discover -s ./ -p '*test_app.py'  # Assuming tests are in the root directory
+        python -m xmlrunner discover -s ./ -p '*test_app.py' --output=./test-reports
+  # Assuming tests are in the root directory
 
     - name: Archive test reports
       uses: actions/upload-artifact@v2
