--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,34 +1,39 @@
-name: Python Unit Tests
-
+name: Python Unit Test
 on: [push, pull_request]
-
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-
+    - name: Checkout repository
+      uses: actions/checkout@v2
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x' # Choose your desired Python version
-
+        python-version: 3.x  # Choose the Python version you need
+    - name: Cache dependencies
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Replace with your requirements file if needed
-
-    - name: Run unit tests and generate reports
+        pip install -r requirements.txt  # Replace with your actual requirements file
+    - name: Run unit tests
       run: |
-        mkdir test-reports  # Create a directory to store test reports
-        python -m unittest discover -s ./ -p '*test_app.py'  # Run tests
-        
-        # Generate your test reports using xmlrunner in the 'test-reports' directory
-        python -m xmlrunner discover -s ./ -p '*test_app.py' --output=./test-reports
-
-    - name: Archive test reports
+        pytest --junitxml=test-results.xml
+      continue-on-error: true
+    - name: Archive test results
       uses: actions/upload-artifact@v2
       with:
-        name: test-reports
-        path: test-reports  # Store the test reports directory as an artifact
+        name: test-results
+        path: test-results.xml
+
+
+
+
+
+
+
