--- a/.github/workflows/dockerimagecreation.yml
+++ b/.github/workflows/dockerimagecreation.yml
@@ -1,18 +1,25 @@
 name: Docker Build and Push
-on: [push, pull_request]
- 
+
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  build-and-push-image:
+  build-and-push:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Log in to GitHub Packages
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
-      - name: Build and Push Docker image
-        run: |
-          docker buildx build --platform linux/amd64 -t docker.pkg.github.com/${{ github.repository }}/insightiqapp:latest --push .
-          docker push docker.pkg.github.com/${{ github.repository }}/insightiqapp:latest
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Log in to GitHub Packages
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u "${{ github.actor }}" --password-stdin
+
+    - name: Build and Push Docker Image
+      run: |
+        docker buildx create --use
+        docker buildx build --platform linux/amd64 -t docker.pkg.github.com/insightiq/ica2/insightiqapp:latest --push .
