--- a/.github/workflows/dockerimagecreation.yml
+++ b/.github/workflows/dockerimagecreation.yml
@@ -1,10 +1,6 @@
 name: Docker Build and Push
 
-on:
-  push:
-    branches:
-      - main
-
+on: [push, pull_request]
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
