--- a/.github/workflows/dockerimagecreation.yml
+++ b/.github/workflows/dockerimagecreation.yml
@@ -7,16 +7,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Log in to GitHub Packages
-        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login docker.pkg.github.com -u "${{ github.actor }}" --password-stdin
-
-      - name: Build and Push Docker Image
-        run: |
-          docker buildx create --use
-          docker buildx build --platform linux/amd64 -t docker.pkg.github.com/insightiq/ica2/insightiqapp:latest --push .
+     - name: Build and Push Docker Image
+       run: |
+        docker build -t docker.pkg.github.com/username/repository/image:tag .
+        echo "${{ secrets.DOCKER_TOKEN }}" | docker login docker.pkg.github.com -u "${{ github.actor }}" --password-stdin
+        docker push docker.pkg.github.com/username/repository/image:tag
