--- a/.github/workflows/dockerimagecreation.yml
+++ b/.github/workflows/dockerimagecreation.yml
@@ -1,14 +1,19 @@
-name: Docker Build and Push
-
-on: [push, pull_request]
-
+name: Build and Push Docker Image
+on:
+  push:
+    branches:
+      - main  # Modify based on your branch requirements
 jobs:
-  build-and-push:
+  build-and-push-image:
     runs-on: ubuntu-latest
-
     steps:
-     - name: Build and Push Docker Image
-       run: |
-        docker build -t docker.pkg.github.com/username/repository/image:tag .
-        echo "${{ secrets.DOCKER_TOKEN }}" | docker login docker.pkg.github.com -u "${{ github.actor }}" --password-stdin
-        docker push docker.pkg.github.com/username/repository/image:tag
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Log in to GitHub Packages
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+      - name: Build and Push Docker image
+        run: |
+          docker buildx build --platform linux/amd64 -t docker.pkg.github.com/${{ github.repository }}/insightiq:latest .
+          docker push docker.pkg.github.com/${{ github.repository }}/insightiq:latest
