--- a/.github/workflows/dockerimagecreation.yml
+++ b/.github/workflows/dockerimagecreation.yml
@@ -1,8 +1,5 @@
 name: Build and Push Docker Image
-on:
-  push:
-    branches:
-      - main  # Modify based on your branch requirements
+on: [push, pull_request]
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
