--- a/.github/workflows/dockerimagecreation.yml
+++ b/.github/workflows/dockerimagecreation.yml
@@ -16,7 +16,7 @@ jobs:
         node-version: '14'
 
     - name: Log in to GitHub Packages
-      run: echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+      run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
 
     - name: Build and push Docker image
       env:
