--- a/.github/workflows/windows_selfhosted.yml
+++ b/.github/workflows/windows_selfhosted.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run unit tests and generate text report
         run: |
-          python -m unittest discover -s ./ -p 'test_app.py' 2>&1 | tee test-report.txt
+          "${env:pythonLocation}\python.exe" -m unittest discover -s ./ -p 'test_app.py' 2>&1 | tee test-report.txt
 
       - name: Archive test report
         uses: actions/upload-artifact@v2
