--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,6 @@
 name: CI/CD
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
+on: [push, pull_request]
 
 jobs:
   python_unit_tests:
@@ -33,6 +29,66 @@ jobs:
       with:
         name: test-report
         path: test-report.txt  # Store the text report as an artifact
+
+
+  Linux-self-hosted:
+    runs-on: self-hosted
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt  # Replace with your requirements file if needed
+
+      - name: Run unit tests and generate text report
+        run: |
+          python -m unittest discover -s ./ -p 'test_app.py' 2>&1 | tee test-report.txt
+
+      - name: Archive test report
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-report
+          path: test-report.txt  # Store the text report as an artifact
+
+
+  Windows-self-hosted:
+    runs-on: self-hosted
+
+    strategy:
+      matrix:
+        os: [windows-2019]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt  # Replace with your requirements file if needed
+
+      - name: Run unit tests and generate text report
+        run: |
+          "${env:pythonLocation}\python.exe" -m unittest discover -s ./ -p 'test_app.py' 2>&1 | tee test-report.txt
+
+      - name: Archive test report
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-report
+          path: test-report.txt  # Store the text report as an artifact 
 
   build_and_push_docker_image:
     runs-on: ubuntu-latest
