--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,7 +78,7 @@ jobs:
 
       - name: Run unit tests and generate text report
         run: |
-          "${env:pythonLocation}\python.exe" -m unittest discover -s ./ -p 'test_app.py' 2>&1 | tee test-report.txt
+          python -m unittest discover -s ./ -p 'test_app.py' 2>&1 | tee test-report.txt
 
       - name: Archive test report
         uses: actions/upload-artifact@v2
