--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,7 +78,11 @@ jobs:
 
       - name: Run unit tests and generate text report
         run: |
-          python -m unittest discover -s ./ -p 'test_app.py' 2>&1 | tee test-report.txt
+          & "${env:pythonLocation}\python.exe" -m unittest discover -s ./ -p 'test_app.py' 2>&1 | tee test-report.txt
+        shell: pwsh
+        env:
+          pythonLocation: C:\Users\Administrator\actions-runner\_work\_tool\Python\3.12.0\x64
+
 
       - name: Archive test report
         uses: actions/upload-artifact@v2
