--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Run unit tests and generate text report
         run: |
           & "${env:pythonLocation}\python.exe" -m unittest discover -s ./ -p 'test_app.py' 2>&1 | tee test-report.txt
-        shell: pwsh
+        shell: C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe
         env:
           pythonLocation: C:\Users\Administrator\actions-runner\_work\_tool\Python\3.12.0\x64
 
