--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,10 @@
-name: CI/CD 
+name: CI/CD
 
 on: [push, pull_request]
 
 jobs:
   python_unit_tests:
     runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Replace with your requirements file if needed
-
-    - name: Run unit tests and generate text report
-      run: |
-        python -m unittest discover -s ./ -p 'test_app.py' 2>&1 | tee test-report.txt
-
-    - name: Archive test report
-      uses: actions/upload-artifact@v2
-      with:
-        name: test-report
-        path: test-report.txt  # Store the text report as an artifact
-
-
-  Linux-self-hosted:
-    runs-on: self-hosted
 
     steps:
       - name: Checkout code
@@ -55,9 +27,35 @@ jobs:
       - name: Archive test report
         uses: actions/upload-artifact@v2
         with:
+          name: test-report
+          path: test-report.txt  # Store the text report as an artifact
+
+  Linux-self-hosted:
+    runs-on: self-hosted
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt  # Replace with your requirements file if needed
+
+      - name: Run unit tests and generate text report
+        run: |
+          python -m unittest discover -s ./ -p 'test_app.py' 2>&1 | tee test-report1.txt
+
+      - name: Archive test report
+        uses: actions/upload-artifact@v2
+        with:
           name: test-report1
           path: test-report1.txt  # Store the text report as an artifact
-
 
   Windows-self-hosted:
     runs-on: Windows  
@@ -78,33 +76,41 @@ jobs:
 
       - name: Run unit tests and generate text report
         run: |
-         python -m unittest discover -s ./ -p 'test_app.py'
+          python -m unittest discover -s ./ -p 'test_app.py' 2>&1 | tee test-report2.txt
 
       - name: Archive test report
         uses: actions/upload-artifact@v2
         with:
           name: test-report2
-          path: test-report2.txt  # Store the text report as an artifact 
+          path: test-report2.txt  # Store the text report as an artifact
 
-  build_and_push_docker_image:
+  Package-Management-and-Service-Containers:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Docker
-      uses: actions/setup-node@v4
-      with:
-        node-version: '14'
+      # Publish Docker image to GitHub Packages
+      - name: Publish Docker image
+        run: |
+          # Build the Docker image
+          docker build -t docker.pkg.github.com/insightiq/ica2/ica2_image:v1 .
+          # Authenticate to GitHub Packages
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u insightiq --password-stdin
+          # Push the Docker image to GitHub Packages
+          docker push docker.pkg.github.com/insightiq/ica2/ica2_image:v1 .
+        env:
+          USERNAME: ${{ github.repository_owner }}
+          REPOSITORY: ${{ github.event.repository.name }}
+          IMAGE_NAME: ica2_image
+          TAG: v1
 
-    - name: Log in to GitHub Packages
-      run: docker login docker.pkg.github.com -u insightiq --password-stdin < <(echo ${{ secrets.GITHUB_TOKEN }})
-
-    - name: Build and push Docker image
-      env:
-        VERSION: ${{ github.sha }}
-      run: |
-        docker build -t docker.pkg.github.com/${{ github.repository }}/insightiq:${{ env.VERSION }} .
-        docker push docker.pkg.github.com/${{ github.repository }}/insightiq:${{ env.VERSION }}
-
+#      # Use Docker image in service container and run integration tests
+#      - name: Run integration tests using Docker image
+#        run: |
+#          docker run --rm docker.pkg.github.com/insightiq/ica2/ica2_image:v1  /bin/sh -c "your_integration_test_command_here"
+#        env:
+#          USERNAME: ${{ github.repository_owner }}
+#          REPOSITORY: ${{ github.event.repository.name }}
+#          IMAGE_NAME: my-docker-image
+#          TAG: latest
