--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,8 +97,8 @@ jobs:
           # Build the Docker image
           docker build -t docker.pkg.github.com/insightiq/ica2/ica2_image:v1 .
           export DOCKER_CLI_ASK_PASS=0
-          # Authenticate to GitHub Packages using Docker PAT
-          echo "${DOCKERHUB_TOKEN}" | docker login docker.pkg.github.com -u insightiq --password-stdin
+          # Authenticate to GitHub Packages using DOCKER_TOKEN
+          echo "${ secrets.DOCKERHUB_TOKEN}" | docker login docker.pkg.github.com -u insightiq --password-stdin
           # Push the Docker image to GitHub Packages
           docker push docker.pkg.github.com/insightiq/ica2/ica2_image:v1
         env:
