--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,9 +96,9 @@ jobs:
         run: |
           # Build the Docker image
           docker build -t docker.pkg.github.com/insightiq/ica2/ica2_image:v1 .
-          export DOCKER_CLI_ASK_PASS=0
-          # Authenticate to GitHub Packages using DOCKER_TOKEN
-          echo "${ secrets.DOCKERHUB_TOKEN}" | docker login docker.pkg.github.com -u insightiq --password-stdin
+          #export DOCKER_CLI_ASK_PASS=0
+          # Authenticate to GitHub Packages using secret
+          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login docker.pkg.github.com -u insightiq --password-stdin
           # Push the Docker image to GitHub Packages
           docker push docker.pkg.github.com/insightiq/ica2/ica2_image:v1
         env:
