--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -115,10 +115,10 @@ jobs:
         
           # Start the container
           docker run --rm -d --name ica2_container -p 8080:8080 docker.pkg.github.com/insightiq/ica2/ica2_image:v1
-          sleep 20  # Give some time for the container to start (adjust this time if needed)
+          sleep 10  # Give some time for the container to start (adjust this time if needed)
 
           # TEST:  Send an HTTP request to the service endpoint and validate the response
-          response=$(curl -sS http://localhost:8080/api/endpoint)
+          response=$(curl -sS http://localhost:8080)
         
           # Check if the response contains an expected output or status code
           if [[ "$response" == *"expected_output"* ]]; then
